--- a/html/alquiler.html
+++ b/html/alquiler.html
@@ -66,7 +66,7 @@
                 <br>
                 <i class="fa-solid fa-bed"> 3: Bedroom </i><br>
                 <br>
-                <i class="fa-solid fa-kitchen-set"> :Cocina</i><br>
+                <i class="fa-solid fa-kitchen-set"> Kitchen</i><br>
             </section>
 
 
@@ -88,7 +88,7 @@
                 <br>
                 <i class="fa-solid fa-bed"> 5: Bedroom </i><br>
                 <br>
-                <i class="fa-solid fa-kitchen-set"> Cocina</i><br>
+                <i class="fa-solid fa-kitchen-set"> Kitchen</i><br>
             </section>
 
 
@@ -110,7 +110,7 @@
                 <br>
                 <i class="fa-solid fa-bed"> 7: Bedroom </i><br>
                 <br>
-                <i class="fa-solid fa-kitchen-set"> Cocina</i><br>
+                <i class="fa-solid fa-kitchen-set"> Kitchen</i><br>
             </section>
 
 
@@ -130,15 +130,21 @@
             <section>
                 <i class="fa-solid fa-bath">2: Bathroom</i><br>
                 <br>
-                <i class="fa-solid fa-bed"> 5: Bedroom </i><br>
+                <i class="fa-solid fa-bed"> 5: Habitaciones </i><br>
                 <br>
-                <i class="fa-solid fa-kitchen-set"> Cocina</i><br>
+                <i class="fa-solid fa-kitchen-set"> Kitchen</i><br>
             </section>
 
             <button class="shadow-drop-top-bottom"><a href="../html/contacto.html">Contactar</a></button>
         </article>
 
-    </section>
+    
+    </section> <br>
+
+    <section id="mapa">
+        <p>Nuestra ubicacion en la mapa:</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13135.122535648157!2d-58.40835784458009!3d-34.60970819999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac336a09c01%3A0xc702e3bd05a794d3!2sPlaza%20del%20Congreso!5e0!3m2!1sfr!2sar!4v1684179282409!5m2!1sfr!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section><br>
 
     <section>
         <p class="animate__animated  animate__fadeInLeftBig">Contactarnos por redes sociales para saber mas de nuestro servicios</p> 
@@ -147,13 +153,7 @@
         <p class="animate__animated animate__fadeInDownBig"><i class="fa-brands fa-twitter"></i></p>
         
     </section>
-    <section class="mapa">
-        <nav>
-            <p>Nuestro ubicacion en la mapa</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13135.122535648157!2d-58.40835784458009!3d-34.60970819999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac336a09c01%3A0xc702e3bd05a794d3!2sPlaza%20del%20Congreso!5e0!3m2!1sfr!2sar!4v1684179282409!5m2!1sfr!2sar" width="850" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" style="text-align: center;"></iframe>
-        </nav>
-    </section>
-     <br> <br> <br> <br> <br> <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
     <footer>
         <ul class="footer-links">
